# hef_manager

./: Cargo.toml  README.md  build.rs  proto_dump.pb.cc
hef/: dncnn3.hef  hand_landmark_lite.hef  lightface_slim.hef  tddfa_mobilenet_v1.hef
proto/: hef.proto
src/: hef.rs  lib.rs  main.rs  test_proto.rs
